--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -43,6 +43,16 @@
   justify-content: space-between;
 }
 
+.maxwh {
+  width: 100%;
+  height: 100%;
+}
+
+.mauto {
+  width: 1380px;
+  margin: 0 auto;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -54,7 +64,8 @@ body {
   height: 100%;
   color: #282828;
   background: #f4f4f4;
-  font: 14px/1.5 "PingFang SC", "Lantinghei SC", "Microsoft YaHei", "HanHei SC", "Helvetica Neue", "Open Sans", Arial, "Hiragino Sans GB", "微软雅黑", STHeiti, "WenQuanYi Micro Hei", SimSun, sans-serif;
+  font: 14px/1.5 "PingFang SC", "Lantinghei SC", "Microsoft YaHei", "HanHei SC", "Helvetica Neue", "Open Sans", Arial,
+    "Hiragino Sans GB", "微软雅黑", STHeiti, "WenQuanYi Micro Hei", SimSun, sans-serif;
 }
 
 ul {
@@ -63,5 +74,5 @@ ul {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
 }
