--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -57,6 +57,27 @@
   user-select: none;
 }
 
+.pages {
+  padding-bottom: 40px;
+}
+
+.work_list_box {
+  padding-top: 20px;
+}
+
+.card_list {
+  position: relative;
+  background: #fff;
+  width: 260px;
+  height: 345px;
+  border-radius: 4px;
+  margin: 0 20px 20px 0;
+}
+
+.card_list:nth-child(5n) {
+  margin-right: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -78,5 +99,63 @@ ul {
 }
 
 a {
+  outline: none !important;
   text-decoration: none !important;
+}
+
+.ant-pagination-item:focus,
+.ant-pagination-item:hover {
+  border-color: #e9e9e9 !important;
+}
+
+.ant-pagination-prev,
+.ant-pagination-next {
+  color: #999;
+  border-radius: 4px;
+  background-color: #fff;
+  border: 1px solid #e9e9e9;
+}
+
+.ant-pagination-prev:hover,
+.ant-pagination-next:hover {
+  font-weight: 400;
+  color: #333 !important;
+  background: #ffe300;
+  border-radius: 4px;
+  border: 1px solid #ffe300;
+}
+
+.ant-pagination-disabled:hover {
+  color: #999 !important;
+  border-radius: 4px;
+  background-color: #fff !important;
+  border: 1px solid #e9e9e9 !important;
+}
+
+.ant-pagination-item-active {
+  font-weight: 400;
+  color: #333 !important;
+  background: #ffe300;
+  border-radius: 4px;
+  border: 1px solid #ffe300;
+}
+
+.ant-pagination-item.ant-pagination-item-active a {
+  color: #333 !important;
+}
+
+.ant-pagination-item a {
+  color: #999 !important;
+}
+
+.ant-pagination-item:hover {
+  font-weight: 400;
+  color: #333;
+  background: #ffe300;
+  border-radius: 4px;
+  border: 1px solid #ffe300;
+}
+
+.ant-pagination-item:hover a {
+  color: #333 !important;
 }
