--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -137,8 +137,7 @@ a {
   text-decoration: none !important;
 }
 
-.ant-pagination-item:focus,
-.ant-pagination-item:hover {
+.ant-pagination-item:focus {
   border-color: #e9e9e9 !important;
 }
 
